--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,16 @@ plugins {
 }
 
 repositories {
-    mavenCentral()
     mavenLocal() {
         content {
             includeGroup "com.netflix.conductor"
             includeGroup "io.orkes.conductor"
         }
     }
+    maven {
+        url "https://orkes-artifacts-repo.s3.amazonaws.com/releases"
+    }
+    mavenCentral()
 }
 
 ext {
@@ -93,6 +96,15 @@ publishing {
     publications {
         shadow(MavenPublication) { publication ->
             project.shadow.component(publication)
+        }
+    }
+
+    repositories {
+        maven {
+            url "s3://orkes-artifacts-repo/releases"
+            authentication {
+                awsIm(AwsImAuthentication)
+            }
         }
     }
 }
